@@ -1,3 +1,4 @@
+* Fallback to model name as title
 * Set treeview footer sticky on bottom
 * Add get, in_ and contains methods to PYSON
 * Manage deletable and writable state
